--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
+    "connect-mongo": "^5.1.0",
     "eslint": "^9.6.0",
     "express-session": "^1.18.0",
     "globals": "^15.7.0",
@@ -31,6 +32,7 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "next-auth": "^4.24.7"
